# polish-football-manager

./: .gitignore  README.md
doc/: manager-messages.txt  match-messages.txt
dos-original/: README.md
dos-original/release-v.1.04/: KLUBY_01.CFG  Kolejka.cfg  MECZ.CFG  NEWS.CFG  Rywal2.cfg  Transfer.cfg  index.htm
dos-original/release-v.1.04/htm/: edytor.htm  finanse.htm  kalendarz.htm  kontynuuj.htm  lista.htm  manager.htm  manager2.htm  mecz.htm  menu.htm  przeciwnik.htm  raport.htm  sklad.htm  (+5 more)
dos-original/src/: Manager.cpp  Mecz.cpp
linux-port/: README.md
linux-port/release/: managerligipolskiej2002
linux-port/src/: ArgumentsReader.cpp  ArgumentsReader.h  BoxDrawingChars.h  CMakeLists.txt  Colors.cpp  Colors.h  ConioColors.h  Footballers.cpp  Footballers.h  Input.cpp  Input.h  Language.cpp  Language.h  Logger.cpp  Logger.h  MainMenu.cpp  MainMenu.h  Manager.cpp  Manager.h  Match.cpp  Match.h  News.cpp  News.h  PlayerClub.cpp  PlayerClub.h  Random.cpp  Random.h  Rounds.cpp  Rounds.h  Rywal.cfg  Squad.cpp  Squad.h  Structs.h  Table.cpp  Table.h  Tactic.cpp  Tactic.h  TeamComposition.cpp  TeamComposition.h  TeamInstructions.cpp  (+5 more)
linux-port/src/data/: en_US-msg-manager.cfg  en_US-msg-match.cfg  footballers-transfer.cfg  msg-manager.cfg  msg-match.cfg  pl_PL-msg-match.cfg  pl_PL.csv  rounds.cfg
linux-port/src/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
linux-port/src/nbproject/private/: configurations.xml  private.xml
(+7 files in other folders)
